Bug fixes with pagination in files.php

--- a/files-stili.css
+++ b/files-stili.css
@@ -329,3 +329,11 @@ box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
     .spinner-border-sm{
     margin-bottom: 2.5px;
   }
+
+   .pagination-wrapper{
+margin: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  width:90%;
+ }
