Birthday added in creating account and editing account

--- a/account-stili.css
+++ b/account-stili.css
@@ -90,7 +90,7 @@
 
 }
 .contact-form input[type="text"],
-.contact-form input[type="password"],.contact-form input[type="email"],.contact-form input[type="number"]
+.contact-form input[type="password"],.contact-form input[type="email"],.contact-form input[type="number"],#datepicker
 {
   border: 1px solid grey;
     padding-left: 8px; 
