--- a/files-stili.css
+++ b/files-stili.css
@@ -337,3 +337,25 @@ margin: auto;
   white-space: nowrap;
   width:90%;
  }
+ .rezultatet{
+  color:red;
+  font-size:20px;
+  margin-top:10px;
+  margin-bottom: 13px;
+}
+.rezultatet-error{
+color: red;
+font-size: 25px;
+margin-bottom: 20px;
+}
+.search-term-display{
+  font-size: 20px;
+}
+  #search-submit{
+    border: 1px solid white;
+    color: white;
+  }
+  #search-submit:hover:enabled{
+    color:black;
+    background: white;
+}
