Bug fix in search design for mobile

--- a/files-stili.css
+++ b/files-stili.css
@@ -155,6 +155,12 @@ height: auto !important;
     padding-right: 10px !important;
   }
 }
+  @media screen and (max-width: 550px){
+#search{
+      width:70% !important;
+      margin-right: 10px;
+    }
+    }
 @media screen and (max-width:460px){
 .download-name{
         height: 80px !important;
