Field character length changed in profile and registration

--- a/group-stili.css
+++ b/group-stili.css
@@ -94,6 +94,7 @@ margin-right: 30px !important;
     
       font-size: 27px !important;
       text-indent: 0px !important;
+
      
     }
     .foto{
@@ -280,6 +281,7 @@ margin-right:10px;
   }
 .emri{
 margin-top:-35px;
+word-break: break-all;
 }
 #postimet{
   color:#343a40;
