--- a/files-stili.css
+++ b/files-stili.css
@@ -77,6 +77,7 @@ margin-right:10px;
   background: white;
   margin-bottom: 30px;
   margin-top:-30px;
+  padding: 0px;
 }
 
 
@@ -84,14 +85,20 @@ margin-right:10px;
   .br-mob{
     display: none !important;
   }
+  .entire-download-container{
+  justify-content: space-between !important;
+  width: 100% !important;
+
+}
   .download-container{
 
-width: 49% !important;
-margin-left: 1px !important;
-margin-right: 1px !important;
-border-radius: 10px !important;
+width: 49.5% !important;
+margin-top:5px !important;
+margin-left: 0px !important;
+margin-right: 0px !important;
+border-radius: 5px !important;
 height: auto !important;
-border:1px solid black !important;
+    border: 1px solid #CECECE !important;
   }
   .date-time{
 
@@ -124,8 +131,8 @@ border:1px solid black !important;
   display: none !important;
 }
 .container{
-border:none;
-width:100%;
+  border: none !important;
+width:100% !important;
 word-break: break-all;
 height:auto;
 background: rgb(243, 243, 243);
@@ -187,13 +194,6 @@ height: auto !important;
 #delete-button, #view-button{
   width:100% !important; 
 }
-.download-container{
-
-width: 49% !important;
-margin-left: 1px !important;
-margin-right: 1px !important;
-height: auto !important;
-  }
   .date-time{
 
     margin:auto !important;
@@ -215,6 +215,10 @@ height: auto !important;
 
 }
 @media screen and (max-width:330px){
+ .entire-download-container{
+  justify-content: center !important;
+
+}
 .download-container{
 width: 98% !important;
 margin-left: 0px !important;
@@ -256,26 +260,33 @@ body {
   margin-top: 30px;
   margin-bottom: 10px;
 }
+.entire-download-container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+   flex-wrap: wrap;
+
+
+}
 .download-container{
 width:250px;
 height:330px;
-display:inline-block;
 background:white;
-margin-left:10px;
-margin-right:10px;
+margin-left: 5px;
+margin-right: 5px;
 margin-top:20px;
 /*transition:transform.3s;*/
 transition: all .2s ease-in-out; 
 overflow: hidden;
-border: 2px solid black;
-border-radius: 30px;
+border:1px solid #BDBDBD;
+border-radius: 20px;
 position: relative;
 }
 .download-container:hover{
   
--webkit-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.75);
+-webkit-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75);
 
 }
 
@@ -364,4 +375,8 @@ margin-bottom: 20px;
   #search-submit:hover:enabled{
     color:black;
     background: white;
+}
+.forma-bootstrap{
+  padding-left:15px;
+    padding-right:15px;
 }
