--- a/group-stili.css
+++ b/group-stili.css
@@ -337,8 +337,8 @@ margin-bottom: 20px;
 }
 .search-term-display{
 font-size: 25px;
-
 word-break: break-all;
+word-break: break-word;
 width: 100%; 
 
 }
