--- a/account-stili.css
+++ b/account-stili.css
@@ -24,10 +24,11 @@
 	 .avatar{
 	 width:100% !important;
 	 }
- .contact-form{
- width:95% !important;
+.contact-form{
+width:95% !important;
+  padding: 20px 30px !important;
 
- }
+}
  .titulli{
    margin-top:20px !important;
    margin-left:22px !important;
@@ -129,7 +130,7 @@
     font-weight: 100;
     cursor: pointer;
     border-radius: 5px;
-    border:2px solid #333333;
+    border:1.5px solid #333333;
     outline: none;
     background: white;
     margin-top: 7%;
