--- a/subscribe-stili.css
+++ b/subscribe-stili.css
@@ -54,7 +54,7 @@
 }
 .btn{
   background:#212529;
-  color: white;
+  color: white !important;
   padding: 0 10px;
   text-transform: uppercase;
   cursor: pointer;
