--- a/account-stili.css
+++ b/account-stili.css
@@ -44,17 +44,24 @@ width:95% !important;
  .contact-form
  {
      margin:auto;
-     width: 400px;
-     height:auto;
-     padding: 20px 40px;
-     box-sizing: border-box;
-     background: white;
-     /*-webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 8px 25px 10px rgba(0,0,0,0.25);
-     box-shadow: 0px 10px 13px -7px #000000, 0px 8px 25px 10px rgba(0,0,0,0.25);*/
-     box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
-    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
-     border-radius: 20px;
-     margin-top:20px;
+    width: 400px;
+    height:auto;
+    padding: 20px 40px;
+    box-sizing: border-box;
+    background: white;
+    /*-webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 8px 25px 10px rgba(0,0,0,0.25);
+    box-shadow: 0px 10px 13px -7px #000000, 0px 8px 25px 10px rgba(0,0,0,0.25);*/
+   
+    /* Before */
+   /* box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
+    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);*/
+    box-shadow: 0 26px 34px -32px rgba(51,51,51,.37);
+    -webkit-box-shadow: 0 26px 34px -32px rgba(51,51,51,.37);
+    /*border-radius: 20px;*/
+    border-radius: 7px;
+    border: 1px solid #ebebeb;
+    /*border: 1px solid #ebebeb;*/
+    margin-top:20px;
 
  }
  @media screen and (max-width:959px){
