--- a/login-stili.css
+++ b/login-stili.css
@@ -71,9 +71,16 @@ input[type=checkbox]
     background: white;
     /*-webkit-box-shadow: 0px 10px 13px -7px #000000, 0px 8px 25px 10px rgba(0,0,0,0.25);
     box-shadow: 0px 10px 13px -7px #000000, 0px 8px 25px 10px rgba(0,0,0,0.25);*/
-    box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
-    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
-    border-radius: 20px;
+   
+    /* Before */
+   /* box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);
+    -webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, .1), 0 8px 16px rgba(0, 0, 0, .1);*/
+    box-shadow: 0 26px 34px -32px rgba(51,51,51,.37);
+    -webkit-box-shadow: 0 26px 34px -32px rgba(51,51,51,.37);
+    /*border-radius: 20px;*/
+    border-radius: 7px;
+    border: 1px solid #ebebeb;
+    /*border: 1px solid #ebebeb;*/
     margin-top:20px;
 
 }
